mejora estetica del formulario

--- a/index.html
+++ b/index.html
@@ -83,33 +83,28 @@
         <form onsubmit="return false">
           <div align="center"><h2 class="form-signin-heading">Registro</h2></div>
 
-          <div class="input-group input-group-lg">
-              <span class="input-group-addon col-6" id="sizing-addon1">Nombre:</span>
-              <label for="inputNombre" class="sr-only">Nombre</label>
+          <div class="form-group input-group-lg">
+              <label for="inputNombre" >Nombre:</label>
               <input type="text" id="inputNombre" class="form-control" placeholder="ingresa tu nombre..." aria-describedby="sizing-addon1" required>
           </div>
 
-          <div class="input-group input-group-lg">
-              <span class="input-group-addon col-6" id="sizing-addon1">Email:</span>
-              <label for="inputEmail" class="sr-only">Email</label>
-              <input type="text" id="inputEmail" class="form-control" placeholder="ingresa tu email..." aria-describedby="sizing-addon1" required>
+          <div class="form-group input-group-lg">
+              <label for="inputEmail" >Email:</label>
+              <input type="email" id="inputEmail" class="form-control" placeholder="ingresa tu email..." aria-describedby="sizing-addon1" required>
           </div>
 
-          <div class="input-group input-group-lg">
-              <span class="input-group-addon" id="sizing-addon1">Celular:</span>
-              <label for="inputCelular" class="sr-only">Celular</label>
-              <input type="text" id="inputCelular" class="form-control" placeholder="ingresa tu teléfono celular..." aria-describedby="sizing-addon1" required>
+          <div class="form-group input-group-lg">
+            <label for="inputCelular" >Celular:</label>
+              <input type="tel" id="inputCelular" class="form-control" placeholder="ingresa tu teléfono celular..." aria-describedby="sizing-addon1" required>
           </div>
 
-          <div class="input-group input-group-lg">
-              <span class="input-group-addon" id="sizing-addon1">Ciudad:</span>
-              <label for="inputCiudad" class="sr-only">Ciudad</label>
+          <div class="form-group input-group-lg">
+              <label for="inputCiudad" >Ciudad:</label>
               <input type="text" id="inputCiudad" class="form-control" placeholder="ingresa tu ciudad..." aria-describedby="sizing-addon1" required>
           </div>
 
-          <div class="input-group input-group-lg">
-              <span class="input-group-addon" id="sizing-addon1">País:</span>
-              <label for="inputPais" class="sr-only">País</label>
+          <div class="form-group input-group-lg">
+              <label for="inputPais" >País:</label>
               <input type="text" id="inputPais" class="form-control" placeholder="ingresa tu país..." aria-describedby="sizing-addon1" required>
           </div>
           <div class="input-group input-group-lg">
