--- a/trainer.html
+++ b/trainer.html
@@ -7,7 +7,7 @@
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<link rel="icon" href="../../favicon.ico">
+	<link rel="icon" href="images/ic_launcher.png">
 	<title>Registro de Entrenadores</title>
 
 	<script src="https://www.gstatic.com/firebasejs/3.4.1/firebase.js"></script>
@@ -22,156 +22,148 @@
 		};
 		firebase.initializeApp(config);
 	</script>
-	<!-- Bootstrap core CSS -->
 	<link href="dist/css/bootstrap.min.css" rel="stylesheet">
-	<!-- Custom styles for this template -->
-	<link href="dist/css/register.css" rel="stylesheet">
-	<link href="dist/css/navbar-fixed-top.css" rel="stylesheet">
+    <link href="dist/css/navbar-fixed-top.css" rel="stylesheet">
+    <link href="dist/css/signin.css" rel="stylesheet">
+    <link href="dist/css/custom.css" rel="stylesheet">
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
+
+	<!-- Bootstrap core JavaScript
+    ================================================== -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="dist/js/bootstrap.min.js"></script>
+    <script src="assets/js/docs.min.js"></script>
+
+    <script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
 </head>
 
 <body>
-	<!-- Static navbar -->
-	<nav class="navbar navbar-default navbar-fixed-top">
+	<!-- Fixed navbar -->
+    <nav class="navbar navbar-inverse navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="listaEntrenadores.html">Sorteo de Asesores</a>
+		            <span class="sr-only">Toggle navigation</span>
+		            <span class="icon-bar"></span>
+		            <span class="icon-bar"></span>
+		            <span class="icon-bar"></span>
+	         	</button>
+	         	<a href="index.html">
+            		<img class="navbar-brand" alt="Brand" src="images/ic_launcher.png">
+          		</a>
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="#">Bienvenido,
+					<li class="active"><a href="#">Bienvenido
 						<script>
-						var user = localStorage.getItem("nombre");
-						document.write(user);
+							var user = String(localStorage.getItem("nombre"));
+							if(user != "null") document.write(","+user);
+							else document.write("usuario");
+							
 						</script>
 						</a>
+					</li>
+					<li> 
+						<a href="listaEntrenadores.html">Sorteo de Asesores</a> 
 					</li>
 					<li><a href="panelDeControl.html">Panel de Control</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-					<li class="active"><a id="cerrarSesion" href="#">Cerrar Sesion<span class="sr-only">(current)</span></a></li>
+					<li><a id="cerrarSesion" href="#">Cerrar Sesion<span class="sr-only">(current)</span></a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
 	</nav>
 	<div class="container">
 
+		<form onsubmit="return false">
+          	<div align="center"><h2 class="form-signin-heading"> Registro de entrenador </h2></div>
+			<div class="form-group input-group-lg">
+				<label for="nombre"> Nombre: </label>
+			    <input type="text" class="form-control" placeholder="Ej. Juan Perez" id="nombre">
+		  	</div>
+		  	<div class="form-group input-group-lg">
+		  		<label for="biografia"> Biografía: </label>
+			    <textarea class="form-control" rows="3" placeholder="Ej. Experiencia de 5 años en Body Combat." id="biografia"></textarea>
+		  	</div>
+		  	<div class="form-group input-group-lg">
+		  		<label for="imagen"> Imágen de Perfil: </label>
+			    <input type="file" class="form-control" id="imagen">
+		  	</div>
+		  	<div class="form-group input-group-lg form-inline">
+				<label for="reunion"> Dias de Reunion: </label>
+				<ul class="list-group" id="reunion">
+					<li class="form-group input-group-lg">
+						<div class="checkbox">
+							<label>
+								<input type="checkbox" value="lunes" id="lunes"> Lunes &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+							</label>
+						</div>
+						<input type="text" class="form-control timepicker" id="lunes_inicio">
+						<input type="text" class="form-control timepicker" id="lunes_fin">
+					</li>
+					<li class="form-group input-group-lg">
+						<div class="checkbox">
+							<label>
+								<input type="checkbox" value="martes" id="martes"> Martes &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+							</label>
+						</div>
+						<input type="text" class="form-control timepicker" id="martes_inicio">
+						<input type="text" class="form-control timepicker" id="martes_fin">
+					</li>
+					<li class="form-group input-group-lg">
+						<div class="checkbox">
+							<label>
+								<input type="checkbox" value="miercoles" id="miercoles"> Miercoles&nbsp;&nbsp;
+							</label>
+						</div>
+						<input type="text" class="form-control timepicker" id="miercoles_inicio">
+						<input type="text" class="form-control timepicker" id="miercoles_fin">
+					</li>
+					<li class="form-group input-group-lg">
+						<div class="checkbox">
+							<label>
+								<input type="checkbox" value="jueves" id="jueves"> Jueves &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+							</label>
+						</div>
+						<input type="text" class="form-control timepicker" id="jueves_inicio">
+						<input type="text" class="form-control timepicker" id="jueves_fin">
+					</li>
+					<li class="form-group input-group-lg">
+						<div class="checkbox">
+							<label>
+								<input type="checkbox" value="viernes" id="viernes"> Viernes&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+							</label>
+						</div>
+						<input type="text" class="form-control timepicker" id="viernes_inicio">
+						<input type="text" class="form-control timepicker" id="viernes_fin">
+					</li>
+					<li class="form-group input-group-lg">
+						<div class="checkbox">
+							<label>
+								<input type="checkbox" value="sabado" id="sabado"> Sábado&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+							</label>
+						</div>
+						<input type="text" class="form-control timepicker" id="sabado_inicio">
+						<input type="text" class="form-control timepicker" id="sabado_fin">
+					</li>
+					<li class="form-group input-group-lg">
+						<div class="checkbox">
+							<label>
+								<input type="checkbox" value="domingo" id="domingo"> Domingo&nbsp;&nbsp;&nbsp;
+							</label>
+						</div>
+						<input type="text" class="form-control timepicker" id="domingo_inicio">
+						<input type="text" class="form-control timepicker" id="domingo_fin">
+					</li>
 
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<h2 class="form-register-heading">
-						<center>
-							Registro de entrenador
-						</center>
-					</h2>
-				</div>
-				<div class="panel-body">
-					<div class="form-group">
-						<label for="nombre"> Nombre: </label>
-					    <input type="text" class="form-control" placeholder="Ej. Juan Perez" id="nombre">
-				  	</div>
-				  	<div class="form-group">
-				  		<label for="biografia"> Biografía: </label>
-					    <textarea class="form-control" rows="3" placeholder="Ej. Experiencia de 5 años en Body Combat." id="biografia"></textarea>
-				  	</div>
-				  	<div class="form-group">
-				  		<label for="imagen"> Imágen de Perfil: </label>
-					    <input type="file" class="form-control" id="imagen">
-				  	</div>
-				  	<div class="form-group form-inline">
-						<label for="reunion"> Dias de Reunion: </label>
-						<ul class="list-group" id="reunion">
-							<li class="list-group-item">
-								<div class="checkbox">
-									<label>
-										<input type="checkbox" value="lunes" id="lunes"> Lunes
-									</label>
-								</div>
-								<input type="text" class="form-control timepicker" id="lunes_inicio">
-								<input type="text" class="form-control timepicker" id="lunes_fin">
-							</li>
-							<div id="reunion">
-							<li class="list-group-item">
-								<div class="checkbox">
-									<label>
-										<input type="checkbox" value="martes" id="martes"> Martes
-									</label>
-								</div>
-								<input type="text" class="form-control timepicker" id="martes_inicio">
-								<input type="text" class="form-control timepicker" id="martes_fin">
-							</li>
-							<div id="reunion">
-							<li class="list-group-item">
-								<div class="checkbox">
-									<label>
-										<input type="checkbox" value="miercoles" id="miercoles"> Miercoles
-									</label>
-								</div>
-								<input type="text" class="form-control timepicker" id="miercoles_inicio">
-								<input type="text" class="form-control timepicker" id="miercoles_fin">
-							</li>
-							<div id="reunion">
-							<li class="list-group-item">
-								<div class="checkbox">
-									<label>
-										<input type="checkbox" value="jueves" id="jueves"> Jueves
-									</label>
-								</div>
-								<input type="text" class="form-control timepicker" id="jueves_inicio">
-								<input type="text" class="form-control timepicker" id="jueves_fin">
-							</li>
-							<div id="reunion">
-							<li class="list-group-item">
-								<div class="checkbox">
-									<label>
-										<input type="checkbox" value="viernes" id="viernes"> Viernes
-									</label>
-								</div>
-								<input type="text" class="form-control timepicker" id="viernes_inicio">
-								<input type="text" class="form-control timepicker" id="viernes_fin">
-							</li>
-							<div id="reunion">
-							<li class="list-group-item">
-								<div class="checkbox">
-									<label>
-										<input type="checkbox" value="sabado" id="sabado"> Sábado
-									</label>
-								</div>
-								<input type="text" class="form-control timepicker" id="sabado_inicio">
-								<input type="text" class="form-control timepicker" id="sabado_fin">
-							</li>
-							<div id="reunion">
-							<li class="list-group-item">
-								<div class="checkbox">
-									<label>
-										<input type="checkbox" value="domingo" id="domingo"> Domingo
-									</label>
-								</div>
-								<input type="text" class="form-control timepicker" id="domingo_inicio">
-								<input type="text" class="form-control timepicker" id="domingo_fin">
-							</li>
-
-						</ul>
-				  	</div>
-				  	<button class="btn btn-block btn-success" onClick="register()">Registrar</button>
-				</div>
-			</div>
+				</ul>
+		  	</div>
+		  	<button class="btn btn-block btn-success" onClick="register()">Registrar</button>
 
 
 	</div>
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="dist/js/bootstrap.min.js"></script>
-    <!-- Custom script -->
-
-	<script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
 
     <script type="text/javascript">
     	$(document).ready(function(){
@@ -224,32 +216,6 @@
 			  	mm='0'+mm
 			}
 			today = mm+'/'+dd+'/'+yyyy;
-			/*
-			console.log(nombre.value);
-			console.log(biografia.value);
-			console.log(lunes.checked);
-			console.log(lunes_inicio.value);
-			console.log(lunes_fin.value);
-			console.log(martes.checked);
-			console.log(martes_inicio.value);
-			console.log(martes_fin.value);
-			console.log(miercoles.checked);
-			console.log(miercoles_inicio.value);
-			console.log(miercoles_fin.value);
-			console.log(jueves.checked);
-			console.log(jueves_inicio.value);
-			console.log(jueves_fin.value);
-			console.log(viernes.checked);
-			console.log(viernes_inicio.value);
-			console.log(viernes_fin.value);
-			console.log(sabado.checked);
-			console.log(sabado_inicio.value);
-			console.log(sabado_fin.value);
-			console.log(domingo.checked);
-			console.log(domingo_inicio.value);
-			console.log(domingo_fin.value);
-			console.log(today);
-			*/
 
 			// Points to the root reference
 			var storageRef = firebase.storage().ref();
