--- a/panelPaginasPersonales.html
+++ b/panelPaginasPersonales.html
@@ -4,15 +4,32 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
-    <link rel="icon" href="img/boton-app.png">
+    <link rel="icon" href="images/ic_launcher.png">
     <title>Panel De Páginas Personales</title>
-    <!-- Bootstrap core CSS -->
+    <script src="https://www.gstatic.com/firebasejs/3.4.1/firebase.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+      apiKey: "AIzaSyB4JmaNIheFUZwMsjTBXCnFHKQNfpRFfXA",
+      authDomain: "formularios-81a40.firebaseapp.com",
+      databaseURL: "https://formularios-81a40.firebaseio.com",
+      storageBucket: "formularios-81a40.appspot.com",
+      messagingSenderId: "793947826055"
+      };
+      firebase.initializeApp(config);
+    </script>
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="dist/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-    <!-- Custom styles for this template -->
-    <link href="dist/css/signin.css" rel="stylesheet">
     <link href="dist/css/navbar-fixed-top.css" rel="stylesheet">
+    <link href="dist/css/signin.css" rel="stylesheet">
+    <link href="dist/css/custom.css" rel="stylesheet">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="dist/js/bootstrap.min.js"></script>
+    <script src="assets/js/docs.min.js"></script>
     <style>
     .margintop{
       margin-top: 7px;
@@ -29,16 +46,23 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Páginas Personales</a>
+          <a href="index.html">
+            <img class="navbar-brand" alt="Brand" src="images/ic_launcher.png">
+          </a>
         </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#">Bienvenido,
+              <li class="active"><a href="#">Bienvenido
                 <script>
-                var user = localStorage.getItem("nombre");
-                document.write(user);
+                  var user = String(localStorage.getItem("nombre"));
+                  if(user != "null") document.write(","+user);
+                  else document.write("usuario");
+                  
                 </script>
                 </a>
+              </li>
+              <li>
+                <a href="#">Páginas Personales</a>
               </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -51,6 +75,7 @@
       <button class="btn btn-lg btn-primary btn-block" type="submit" id="agregarPagina">Agregar Página Personal</button>
       <button class="btn btn-lg btn-primary btn-block margintop" type="submit" id="listarPaginas">Lista de Páginas Personales</button>
     </div>
+
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="assets/js/ie10-viewport-bug-workaround.js"></script>    
     <script>
@@ -75,12 +100,5 @@
       window.location.assign("index.html");
     });
     </script>
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="dist/js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
