--- a/trainer.html
+++ b/trainer.html
@@ -60,14 +60,13 @@
 							var user = String(localStorage.getItem("nombre"));
 							if(user != "null") document.write(","+user);
 							else document.write("usuario");
-							
+
 						</script>
 						</a>
 					</li>
-					<li> 
-						<a href="listaEntrenadores.html">Sorteo de Asesores</a> 
+					<li>
+						<a href="panelPaginasPersonales.html">Volver</a>
 					</li>
-					<li><a href="panelDeControl.html">Panel de Control</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a id="cerrarSesion" href="#">Cerrar Sesion<span class="sr-only">(current)</span></a></li>
