--- a/panelPaginasPersonales.html
+++ b/panelPaginasPersonales.html
@@ -29,7 +29,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Páginas Personales</a>
+          <a class="navbar-brand" href="panelPaginasPersonales.html">Páginas Personales</a>
         </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -39,6 +39,7 @@
                 document.write(user);
                 </script>
                 </a>
+                <li><a href="panelDeControl.html">Panel de Control</a></li>
               </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -52,7 +53,7 @@
       <button class="btn btn-lg btn-primary btn-block margintop" type="submit" id="listarPaginas">Lista de Páginas Personales</button>
     </div>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="assets/js/ie10-viewport-bug-workaround.js"></script>    
+    <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
     <script>
 
     /*if(localStorage.getItem("userID")){
