--- a/panelPaginasPersonales.html
+++ b/panelPaginasPersonales.html
@@ -88,7 +88,7 @@
     var listarPaginas = document.getElementById('listarPaginas');
 
     agregarPagina.addEventListener('click', function () {
-      window.location.assign("agregarPagina.html");
+      window.location.assign("trainer.html");
     });
     listarPaginas.addEventListener('click', function () {
       window.location.assign("listarPaginas.html");
