--- a/trainer.html
+++ b/trainer.html
@@ -197,6 +197,8 @@
     	var register = function(){
     		var nombre = document.getElementById("nombre");
     		var biografia = document.getElementById("biografia");
+    		var imagen = document.getElementById("imagen");
+    		console.log(imagen.files[0]);
 
     		var lunes = document.getElementById("lunes");
     			var lunes_inicio = document.getElementById("lunes_inicio");
@@ -253,8 +255,12 @@
 
 			// Points to 'images'
 			var imagesRef = spaceRef.parent;
-
-
+			console.log(imagen.files[0].__proto__);
+			ref.put(imagen.files[0].__proto__.__proto__).then(function(snapshot) {
+			  	console.log('Uploaded a blob or file!');
+			});
+			imagen.files[0]
+			/*
 			firebase.database().ref('entrenador/').push({
 				nombre: nombre.value,
 				biografia: biografia.value,
@@ -281,7 +287,7 @@
 				domingo_fin: domingo_fin.value,
 				fecha_registro: today
 			});
-
+			*/
 			alert("se logro?");
     		//alert(nombre.value+" -- "+biografia.value+" -- "+lunes.checked);
     		//alert(lunes_inicio.value+"--"+lunes_fin.value);
