--- a/listarPaginas.html
+++ b/listarPaginas.html
@@ -103,6 +103,25 @@
       </table>
     </div>
   </div>
+  <!-- Modal -->
+  <div class="modal fade" id="modalEdition" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Cerrar"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myModalLabel"> Edición de entrenador </h4>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal"> Cerrar </button>
+          <button type="button" class="btn btn-primary"> Guardar Cambios </button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <footer class ="bs-docs-footer textcolorWhite" role="contentinfo">
     <p>
       <h3>Siguenos en</h3>
@@ -214,6 +233,10 @@
         button1.info = info;
         button2.info = info;
 
+        // Creando modal de Edición
+        button1.setAttribute("data-toggle", "modal");
+        button1.setAttribute("data-target", "#modalEdition");
+
         // Crear la fila completa
         tablaElementos.appendChild(tr);
 
@@ -224,6 +247,7 @@
       function editar_entrenador(event) {
         console.log(this.info);
         console.log("Edicion");
+        $('').modal()
       }
 
       /** Eliminar Entrenador **/
