--- a/listarPaginas.html
+++ b/listarPaginas.html
@@ -206,7 +206,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal"> Cerrar </button>
-          <button type="button" class="btn btn-primary"> Guardar Cambios </button>
+          <button type="button" class="btn btn-primary" id="guardar_cambios"> Guardar Cambios </button>
         </div>
       </div>
     </div>
@@ -247,6 +247,7 @@
         //console.log(data.val());
         // Capturar toda la info
         var info = data.val();
+        info.key = data.key;
 
         // Crear elementos
         var tr = document.createElement('tr');
@@ -346,7 +347,7 @@
         //addCommentElement(postElement, data.key, data.val().text, data.val().author);
       });
 
-      /** Editar Entrenador **/
+      /** Editar Entrenador Modal**/
       function editar_entrenador(event) {
         console.log(this.info);
         console.log("Edicion");
@@ -379,6 +380,11 @@
           var domingo_inicio = document.getElementById("domingo_inicio");
           var domingo_fin = document.getElementById("domingo_fin");
 
+        // Info en el boton de guardar cambios
+        var button = document.getElementById("guardar_cambios");
+        button.addEventListener('click', update);
+        button.info = this.info;
+
         // Procedemos a cargar datos
         nombre.value = this.info.nombre;
         biografia.value = this.info.biografia;
@@ -403,6 +409,80 @@
         domingo.checked = this.info.domingo;
           domingo_inicio.value = this.info.domingo_inicio;
           domingo_fin.value = this.info.domingo_fin;
+      }
+
+      /** Registrar entrenador editado **/ 
+      var update = function(){
+        console.log(this.info)
+        var nombre = document.getElementById("nombre");
+        var biografia = document.getElementById("biografia");
+        var imagen = document.getElementById("imagen");
+        //console.log(imagen.files[0]);
+
+        var lunes = document.getElementById("lunes");
+          var lunes_inicio = document.getElementById("lunes_inicio");
+          var lunes_fin = document.getElementById("lunes_fin");
+        var martes = document.getElementById("martes");
+          var martes_inicio = document.getElementById("martes_inicio");
+          var martes_fin = document.getElementById("martes_fin");
+        var miercoles = document.getElementById("miercoles");
+          var miercoles_inicio = document.getElementById("miercoles_inicio");
+          var miercoles_fin = document.getElementById("miercoles_fin");
+        var jueves = document.getElementById("jueves");
+          var jueves_inicio = document.getElementById("jueves_inicio");
+          var jueves_fin = document.getElementById("jueves_fin");
+        var viernes = document.getElementById("viernes");
+          var viernes_inicio = document.getElementById("viernes_inicio");
+          var viernes_fin = document.getElementById("viernes_fin");
+        var sabado = document.getElementById("sabado");
+          var sabado_inicio = document.getElementById("sabado_inicio");
+          var sabado_fin = document.getElementById("sabado_fin");
+        var domingo = document.getElementById("domingo");
+          var domingo_inicio = document.getElementById("domingo_inicio");
+          var domingo_fin = document.getElementById("domingo_fin");
+
+        /* Imagen en veremos
+        //getfile
+        var file = imagen.files[0];
+        //create a storage ref
+        var storageRef = firebase.storage().ref('imagenes/'+file.name);
+
+        //upload file
+        var task = storageRef.put(file);
+        **/
+        var newData = {
+          nombre: nombre.value,
+          biografia: biografia.value,
+          lunes: lunes.checked,
+          lunes_inicio: lunes_inicio.value,
+          lunes_fin: lunes_fin.value,
+          martes: martes.checked,
+          martes_inicio: martes_inicio.value,
+          martes_fin: martes_fin.value,
+          miercoles: miercoles.checked,
+          miercoles_inicio: miercoles_inicio.value,
+          miercoles_fin: miercoles_fin.value,
+          jueves: jueves.checked,
+          jueves_inicio: jueves_inicio.value,
+          jueves_fin: jueves_fin.value,
+          viernes: viernes.checked,
+          viernes_inicio: viernes_inicio.value,
+          viernes_fin: viernes_fin.value,
+          sabado: sabado.checked,
+          sabado_inicio: sabado_inicio.value,
+          sabado_fin: sabado_fin.value,
+          domingo: domingo.checked,
+          domingo_inicio: domingo_inicio.value,
+          domingo_fin: domingo_fin.value,
+          fecha_registro: this.info.fecha_registro,
+          url_imagen: this.info.url_imagen
+        };
+
+        var updates = {};
+        updates['/entrenador/' + this.info.key] = newData;
+
+        firebase.database().ref().update(updates);
+        window.location.assign("listarPaginas.html");
       }
 
       /** Eliminar Entrenador **/
