--- a/listarPaginas.html
+++ b/listarPaginas.html
@@ -103,7 +103,7 @@
       </table>
     </div>
   </div>
-  <!-- Modal -->
+  <!-- Modal Edicion -->
   <div class="modal fade" id="modalEdition" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -207,6 +207,25 @@
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal"> Cerrar </button>
           <button type="button" class="btn btn-primary" id="guardar_cambios"> Guardar Cambios </button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal Remove -->
+  <div class="modal fade" id="modalRemove" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Cerrar"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myModalLabel"> ¿Eliminar entrenador? </h4>
+        </div>
+        <div class="modal-body">
+          <h3> ¿Esta seguro que desea eliminar al entrenador <label id="nombreEntrenador"></label></h3>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal"> Cerrar </button>
+          <button type="button" class="btn btn-danger" id="eliminar"> Eliminar </button>
         </div>
       </div>
     </div>
@@ -340,6 +359,10 @@
         // Creando modal de Edición
         button1.setAttribute("data-toggle", "modal");
         button1.setAttribute("data-target", "#modalEdition");
+
+        // Creando modal de Eliminacion de entrenador
+        button2.setAttribute("data-toggle", "modal");
+        button2.setAttribute("data-target", "#modalRemove");
 
         // Crear la fila completa
         tablaElementos.appendChild(tr);
@@ -485,10 +508,23 @@
         window.location.assign("listarPaginas.html");
       }
 
-      /** Eliminar Entrenador **/
+      /** Eliminar Entrenador Modal**/
       function eliminar_entrenador(event) {
         console.log(this.info);
+        var entrenador = document.getElementById("nombreEntrenador");
+        entrenador.innerHTML = this.info.nombre+"?";
+        // Info en el boton de eliminar
+        var button = document.getElementById("eliminar");
+        button.addEventListener('click', remove);
+        button.info = this.info;
         console.log("Eliminar");
+      }
+
+      /** Eliminar Entrenador **/
+      function remove(event) {
+        console.log("Eliminado "+this.info.nombre);
+        firebase.database().ref("/entrenador/" + this.info.key).remove();
+        window.location.assign("listarPaginas.html");
       }
 
       /** Cerrar Sesión **/
