--- a/trainer.html
+++ b/trainer.html
@@ -9,7 +9,7 @@
 	<meta name="author" content="">
 	<link rel="icon" href="images/ic_launcher.png">
 	<title>Registro de Entrenadores</title>
-
+	<script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/3.4.1/firebase.js"></script>
 	<script>
 		// Initialize Firebase
@@ -27,14 +27,10 @@
     <link href="dist/css/signin.css" rel="stylesheet">
     <link href="dist/css/custom.css" rel="stylesheet">
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
-
-	<!-- Bootstrap core JavaScript
-    ================================================== -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="dist/js/bootstrap.min.js"></script>
     <script src="assets/js/docs.min.js"></script>
-
     <script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
 </head>
 
@@ -93,7 +89,7 @@
 		  	<button class="btn btn-lg btn-success btn-block" onClick="register()">Registrar</button>
 		  	<br>
 		  	<div id="registradorCorrectamente">
-		  		
+
 		  	</div>
 		  	<br><br>
 	</div>
@@ -133,7 +129,7 @@
 			window.location.assign("index.html");
 		});
 
-		/** Registrar entrenador **/ 
+		/** Registrar entrenador **/
     	var register = function(){
     		var nombre = document.getElementById("nombre");
     		var biografia = document.getElementById("biografia");
@@ -188,14 +184,14 @@
 			// Clases del div
 			div.className = 'alert alert-success';
 			div.setAttribute("role", "alert");
-			// Poner en el div 
+			// Poner en el div
 			registrado.appendChild(div);
 
 			/** Limpiar campos **/
 	        nombre.value = "";
 	        biografia.value = "";
 	        imagen.value = "";
-    	}	
+    	}
     </script>
 </body>
 </html>
